--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "numpy>=2.2.5",
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
-    "dill>=0.4.0"
+    "dill>=0.4.0",
+    "seaborn>=0.13.2"
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
