--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
     "dill>=0.4.0",
-    "seaborn>=0.13.2"
+    "seaborn>=0.13.2",
+    "gdown"
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
